--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,8 +88,7 @@ jobs:
             --env-vars \
               PRODUCT_SERVICE_DATABASE_URL=${{   secrets.PRODUCT_SERVICE_DATABASE_URL  }} \
               USER_SERVICE_URL=${{   secrets.USER_SERVICE_URL  }} \
-              INVENTORY_SERVICE_URL=${{  secrets.INVENTORY_SERVICE_URL  }} \
-              # Add other environment variables for product service
+              INVENTORY_SERVICE_URL=${{  secrets.INVENTORY_SERVICE_URL  }} 
 
       # Deploy the order service to Azure Container Apps
       - name: Deploy Order Service to Azure Container Apps
@@ -107,8 +106,7 @@ jobs:
               ORDER_SERVICE_KAFKA_ORDER_TOPIC=${{  secrets.ORDER_SERVICE_KAFKA_ORDER_TOPIC }} \
               USER_SERVICE_URL=${{ secrets.USER_SERVICE_URL  }} \ 
               PRODUCT_SERVICE_URL=${{  secrets.PRODUCT_SERVICE_URL }} \
-              INVENTORY_SERVICE_URL=${{  secrets.INVENTORY_SERVICE_URL }} \
-              # Add other environment variables for order service
+              INVENTORY_SERVICE_URL=${{  secrets.INVENTORY_SERVICE_URL }} 
 
       # Deploy the inventory service to Azure Container Apps
       - name: Deploy Inventory Service to Azure Container Apps
@@ -124,5 +122,4 @@ jobs:
               INVENTORY_SERVICE_DATABASE_URL=${{ secrets.INVENTORY_SERVICE_DATABASE_URL }} \
               USER_SERVICE_URL=${{ secrets.USER_SERVICE_URL }} \
               PRODUCT_SERVICE_URL=${{ secrets.PRODUCT_SERVICE_URL }} \
-              ORDER_SERVICE_URL=${{ secrets.ORDER_SERVICE_URL }} \
-              # Add other environment variables for inventory service
+              ORDER_SERVICE_URL=${{ secrets.ORDER_SERVICE_URL }} 
