refactor: Enable CORS for services in deploy workflow
This code change updates the deploy workflow to enable CORS for the user service, product service, order service, and inventory service. The `az containerapp ingress cors add` commands have been replaced with `az containerapp ingress cors enable` commands to properly configure CORS. This resolves an issue where the CORS configuration was not being applied correctly, causing cross-origin requests to fail.

Commit message follows the established convention of using a prefix (`refactor`) to indicate a code refactoring or improvement.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,7 +77,7 @@ jobs:
       # Configure CORS for the user service
       - name: Configure CORS for User Service
         run: |
-          az containerapp ingress cors add \
+          az containerapp ingress cors enable \
             --name service1 \
             --resource-group myresourcegroup \
             --allowed-origins ${{ secrets.USER_SERVICE_URL }} ${{ secrets.PRODUCT_SERVICE_URL }} ${{ secrets.ORDER_SERVICE_URL }} ${{ secrets.INVENTORY_SERVICE_URL }} 
@@ -100,7 +100,7 @@ jobs:
       # Configure CORS for the user service
       - name: Configure CORS for Product Service
         run: |
-          az containerapp ingress cors add \
+          az containerapp ingress cors enable \
             --name service2 \
             --resource-group myresourcegroup \
             --allowed-origins ${{ secrets.ORDER_SERVICE_URL }} ${{ secrets.INVENTORY_SERVICE_URL }} 
@@ -126,7 +126,7 @@ jobs:
       # Configure CORS for the order service
       - name: Configure CORS for Order Service
         run: |
-          az containerapp ingress cors add \
+          az containerapp ingress cors enable \
             --name service3 \
             --resource-group myresourcegroup \
             --allowed-origins ${{ secrets.USER_SERVICE_URL }} ${{ secrets.INVENTORY_SERVICE_URL }} 
@@ -150,7 +150,7 @@ jobs:
       # Configure CORS for the inventory service
       - name: Configure CORS for Inventory Service
         run: |
-          az containerapp ingress cors add \
+          az containerapp ingress cors enable \
             --name service4 \
             --resource-group myresourcegroup \
             --allowed-origins ${{ secrets.USER_SERVICE_URL }} ${{ secrets.PRODUCT_SERVICE_URL }} ${{ secrets.ORDER_SERVICE_URL }} 
