--- a/notification-service/Dockerfile.dev
+++ b/notification-service/Dockerfile.dev
@@ -8,6 +8,8 @@ RUN apt-get update && apt-get install -y \
     protobuf-compiler \
     && rm -rf /var/lib/apt/lists/*
 
+RUN wget -q https://raw.githubusercontent.com/dapr/cli/master/install/install.sh -O - | /bin/bash
+
 RUN pip install poetry 
 
 COPY . /microservice5/
