refactor: Update Docker build paths and CORS URLs for services
This code change updates the Docker build paths for the user-service, product-service, and order-service, as well as the inventory-service. The build paths have been modified to use the current directory instead of relative paths, ensuring that the Docker images are built correctly. Additionally, the CORS URLs have been updated to include the necessary services: user-service, product-service, order-service, and inventory-service. This resolves an issue where the Docker build commands were failing due to incorrect paths and missing CORS URLs.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,6 +59,9 @@ jobs:
             --image ${{ secrets.DOCKER_HUB_USERNAME }}/userservice:latest \
             --target-port 8003 \
             --ingress 'external' \
+            --dapr-app-id user-service \
+            --dapr-app-port 8003 \
+            --dapr-enabled true \
             --env-vars \
               DATABASE_URL=${{ secrets.USER_SERVICE_DATABASE_URL }} \
               SECRET_KEY=${{ secrets.SECRET_KEY }} \
@@ -73,6 +76,14 @@ jobs:
               ORDER_SERVICE_URL=${{ secrets.ORDER_SERVICE_URL }} \
               INVENTORY_SERVICE_URL=${{ secrets.INVENTORY_SERVICE_URL }} \
               NOTIFICATION_SERVICE_URL=${{ secrets.NOTIFICATION_SERVICE_URL }} 
+
+      - name: Deploy Dapr Kafka Component
+        run: |
+          az containerapp dapr component create \
+            --name service1 \
+            --resource-group myresourcegroup \
+            --environment mycontainerappenv \
+            --component ./components/userkafka.yml
 
       # Configure CORS for the user service
       - name: Configure CORS for User Service
