--- a/compose.yaml
+++ b/compose.yaml
@@ -175,6 +175,32 @@ services:
       - postgres_db
       - broker
 
+  placement:
+    image: "daprio/dapr:latest"
+    command: ["./placement"]
+    ports:
+      - "50005:50005"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:50005/v1.0/healthz"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    restart: on-failure
+
+  nodeapp-dapr:
+    image: "daprio/daprd:edge"
+    command: ["daprd",
+     "-app-id", "user_service",
+     "-app-port", "3000",
+     "-placement-host-address", "placement:5000",
+     "-dapr-grpc-port", "50002",
+     "-components-path", "/components"]
+    volumes:
+        - "./components/:/components"
+    depends_on:
+      - service1
+      - placement
+
   postgres_db:
     image: postgres:latest # Use the official PostgreSQL image
     restart: always
@@ -187,6 +213,28 @@ services:
       - "5433:5432"
     volumes:
       - postgres_db:/var/lib/postgresql/data
+
+  # broker:
+  #   image: apache/kafka:3.7.0
+  #   hostname: broker
+  #   container_name: broker
+  #   ports:
+  #     - "9092:9092"
+  #   environment:
+  #     KAFKA_NODE_ID: 1
+  #     KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT"
+  #     KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT_HOST://localhost:9092,PLAINTEXT://broker:19092"
+  #     KAFKA_PROCESS_ROLES: "broker,controller"
+  #     KAFKA_CONTROLLER_QUORUM_VOTERS: "1@broker:29093"
+  #     KAFKA_LISTENERS: "CONTROLLER://:29093,PLAINTEXT_HOST://:9092,PLAINTEXT://:19092"
+  #     KAFKA_INTER_BROKER_LISTENER_NAME: "PLAINTEXT"
+  #     KAFKA_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
+  #     CLUSTER_ID: "4L6g3nShT-eMCtK--X86sw"
+  #     KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+  #     KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+  #     KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+  #     KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+  #     KAFKA_LOG_DIRS: "/tmp/kraft-combined-logs"
 
   broker:
     image: apache/kafka:3.7.0
