--- a/user-service/components/pubsub.yaml
+++ b/user-service/components/pubsub.yaml
@@ -1,11 +1,8 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: user-kafka-pubsub
+  name: user-service
 spec:
-  features:
-    - name: DisableScheduler
-      enabled: true
   type: pubsub.kafka
   version: v1
   metadata:
