refactor: Update Dapr Kafka Component for user-service
This code change updates the deployment workflow to deploy the Dapr Kafka Component for the user-service. The `az containerapp env dapr-component set` command has been modified to include the `--dapr-component-name` flag with the value `user-service` and the `--yaml` flag with the value `./user-service/components/pubsub.yaml`. This ensures that the Dapr Kafka Component is correctly deployed for the user-service.

Commit message follows the established convention of using a prefix (`refactor`) to indicate a code refactoring or improvement.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,12 +77,14 @@ jobs:
               NOTIFICATION_SERVICE_URL=${{ secrets.NOTIFICATION_SERVICE_URL }} 
 
       # Deploy Dapr Kafka Component for the Environment
+      # Deploy Dapr Kafka Component for the Environment
       - name: Deploy Dapr Kafka Component for Environment
         run: |
           az containerapp env dapr-component set \
             --name mycontainerappenv \
             --resource-group myresourcegroup \
-            --components-file ./components/pubsub.yaml
+            --dapr-component-name user-service \
+            --yaml ./user-service/components/pubsub.yaml
 
       # Configure CORS for the user service
       - name: Configure CORS for User Service
