--- a/user-service/Dockerfile
+++ b/user-service/Dockerfile
@@ -42,6 +42,8 @@ RUN poetry install --no-dev --no-root
 # Copy the application code
 COPY . /microservice1/
 
+COPY ./components /dapr/components
+
 # Expose the port the application runs on
 EXPOSE 8003
 
